Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seven
  labels:
    app: seven
spec:
  replicas: 2
  selector:
    matchLabels:
      app: seven
  template:
    metadata:
      labels:
        app: seven
    spec:
      containers:
      - name: seven
        image: acr0720.azurecr.io/july20:1.0.0
        ports:
        - containerPort: 80
        # Adding Liveness Probe
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        # Adding Readiness Probe
        readinessProbe:
          httpGet:
            path: /readyz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
        - name: meghana
    # The "strategy" field should be under the "spec" section, not under "template"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
