Service.yml
apiVersion: v1
kind: Service
metadata:
  name: july20
  namespace: default
spec:
  selector:
    app: july20
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
