NetworkPolicies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: seven-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: seven
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend    # Add labels here for pods allowed to access the 'seven' pods
